--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
-                  <a href="images/gabriel_park.JPG"><img
+                  <a href="images/gabriel_park.png"><img
                       style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo"
-                      src="images/gabriel_park.JPG" class="hoverZoomLink"></a>
+                      src="images/gabriel_park.png" class="hoverZoomLink"></a>
                 </td>
               </tr>
             </tbody>
