add one of my projects

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   </p>
                   <p>
                     At RIT I've worked on Human-centered AI system developement, Multimodal Deep Learning, and Federated
-                    Learning (Collaborative Learning).
+                    Learning.
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:gabrpark@gmail.com">Email</a> &nbsp;/&nbsp;
@@ -58,7 +58,7 @@
             <tbody>
               <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
-                  <h2>Research</h2>
+                  <h2>Projects</h2>
                   <p>
                     I'm interested in MLOps, multimodal deep learning, and generative AI. Most of my project is about
                     training model from human feedback using edge devices.
@@ -95,30 +95,29 @@
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <a href="https://smerf-3d.github.io/">
-                    <span class="papertitle">SMERF: Streamable Memory Efficient Radiance Fields for Real-Time
-                      Large-Scene Exploration</span>
+                    <span class="papertitle">In-the-Loop Interactive Machine Learning Mobile Application</span>
                   </a>
                   <br>
-                  <a href="http://www.stronglyconvex.com/about.html">Daniel Duckworth*</a>,
-                  <a href="https://phogzone.com/">Peter Hedman*</a>,
+                  <a>Gabriel Park</a>,
+                  <!-- <a href="http://www.stronglyconvex.com/about.html">Daniel Duckworth*</a>, -->
+                  <!-- <a href="https://phogzone.com/">Peter Hedman*</a>,
                   <a href="https://creiser.github.io/">Christian Reiser</a>,
                   <a href="">Peter Zhizhin</a>,
                   <a href="">Jean-François Thibert</a>,
                   <a href="https://lucic.ai/">Mario Lučić</a>,
-                  <a href="https://szeliski.org/">Richard Szeliski</a>,
-                  <strong>Jonathan T. Barron</strong>
+                  <a href="https://szeliski.org/">Richard Szeliski</a>, -->
+                  <!-- <strong>Jonathan T. Barron</strong> -->
                   <br>
-                  <em>arXiv</em>, 2023
+                  <!-- <em>arXiv</em>, 2023 -->
                   <br>
-                  <a href="https://smerf-3d.github.io/">project page</a>
+                  <!-- <a href="https://smerf-3d.github.io/">project page</a>
                   /
                   <a href="https://www.youtube.com/watch?v=zhO8iUBpnCc">video</a>
                   /
                   <a href="https://arxiv.org/abs/2312.07541">arXiv</a>
-                  <p></p>
+                  <p></p> -->
                   <p>
-                    Distilling a Zip-NeRF into a tiled set of MERFs lets you fly through radiance fields on laptops and
-                    smartphones at 60 FPS.
+                    Enabling direct interaction between user and machine learning model.
                   </p>
                 </td>
               </tr>
@@ -173,20 +172,20 @@
             </tbody>
           </table>
 
-
+          <!-- 
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tbody>
               <tr>
                 <td>
-                  <h2>Miscellanea</h2>
+                  <h2>Projects</h2>
                 </td>
               </tr>
             </tbody>
           </table>
           <table width="100%" align="center" border="0" cellpadding="20">
-            <tbody>
+            <tbody> -->
 
-              <!-- <tr>
+          <!-- <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/cvf.jpg"></td>
                 <td width="75%" valign="center">
                   <a href="https://cvpr.thecvf.com/Conferences/2024/Organizers">Area Chair, CVPR 2024</a>
@@ -237,20 +236,19 @@
               </tr> -->
 
 
-            </tbody>
-          </table>
-          <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-            <tbody>
-              <tr>
-                <td style="padding:0px">
+    </tbody>
+  </table>
+  <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+    <tbody>
+      <tr>
+        <td style="padding:0px">
 
-                </td>
-              </tr>
-            </tbody>
-          </table>
         </td>
       </tr>
+    </tbody>
+  </table>
+  </td>
+  </tr>
   </table>
 </body>
 
