--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
                   <p class="name" style="text-align: center;">
                     Gabriel Park
                   </p>
-                  <p>I'm a Master's student in Data Science and aspiring Machine Learning Engineer at Rochester
+                  <p>I'm a second year master's student with specialization in Artificial Intelligence at Rochester
                     Institute of Technology (RIT).
                   </p>
                   <p>
-                    At RIT I've worked on Human-centered AI system developement, Multimodal Deep Learning, and Federated
+                    At RIT I've worked on Human-centered AI system research & developement, Multimodal Deep Learning,
+                    and Federated
                     Learning.
                   </p>
                   <p style="text-align:center">
@@ -60,8 +61,8 @@
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <h2>Projects</h2>
                   <p>
-                    I'm interested in MLOps, multimodal deep learning, and generative AI. Most of my project is about
-                    training model from human feedback using edge devices.
+                    I'm interested in multimodal deep learning, generative AI, and MLOps. Most of my project is about
+                    training model from human feedback using edge devices and building the systems for it.
                   </p>
                 </td>
               </tr>
@@ -98,7 +99,7 @@
                     <span class="papertitle">In-the-Loop Interactive Machine Learning Mobile Application</span>
                   </a>
                   <br>
-                  <a>Gabriel Park</a>,
+                  <a>Gabriel Park</a>
                   <!-- <a href="http://www.stronglyconvex.com/about.html">Daniel Duckworth*</a>, -->
                   <!-- <a href="https://phogzone.com/">Peter Hedman*</a>,
                   <a href="https://creiser.github.io/">Christian Reiser</a>,
@@ -144,27 +145,27 @@
                   </script>
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
-                  <a href="https://pratulsrinivasan.github.io/nuvo/">
-                    <span class="papertitle">Nuvo: Neural UV Mapping for Unruly 3D Representations</span>
+                  <a>
+                    <span class="papertitle">Federated Learning on Unimodal Data</span>
                   </a>
                   <br>
-                  <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>,
-                  <a href="http://stephangarbin.com/">Stephan J. Garbin</a>,
-                  <a href="https://dorverbin.github.io/">Dor Verbin</a>,
-                  <strong>Jonathan T. Barron</strong>,
-                  <a href="https://bmild.github.io/">Ben Mildenhall</a>
+                  <a>Gabriel Park</a>,
+                  <a>Rajesh Titung</a>,
+                  <a>Cedric Bone</a>
+                  <!-- <strong>Jonathan T. Barron</strong>, -->
+                  <!-- <a href="https://bmild.github.io/">Ben Mildenhall</a> -->
                   <br>
-                  <em>arXiv</em>, 2023
+                  <!-- <em>arXiv</em>,  -->
+                  2024
                   <br>
-                  <a href="https://pratulsrinivasan.github.io/nuvo/">project page</a>
+                  <!-- <a href="https://pratulsrinivasan.github.io/nuvo/">project page</a>
                   /
                   <a href="https://www.youtube.com/watch?v=hmJiOSTDQZI">video</a>
                   /
-                  <a href="http://arxiv.org/abs/2312.05283">arXiv</a>
+                  <a href="http://arxiv.org/abs/2312.05283">arXiv</a> -->
                   <p></p>
                   <p>
-                    Neural fields let you recover editable UV mappings for the challenging geometries produced by
-                    NeRF-like models.
+                    Exploring the potential of federated learning with unimodal data.
                   </p>
                 </td>
               </tr>
