Edit team member list

--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                     <span class="papertitle">In-the-Loop Interactive Machine Learning Mobile Application</span>
                   </a>
                   <br>
-                  <a>Gabriel Park</a>
-                  <!-- <a href="http://www.stronglyconvex.com/about.html">Daniel Duckworth*</a>, -->
-                  <!-- <a href="https://phogzone.com/">Peter Hedman*</a>,
-                  <a href="https://creiser.github.io/">Christian Reiser</a>,
+                  <a>Gabriel Park</a>,
+                  <a>Rajesh Titung</a>,
+                  <a>Cecilia O. Alm</a>
+                  <!-- <a href="https://creiser.github.io/">Christian Reiser</a>,
                   <a href="">Peter Zhizhin</a>,
                   <a href="">Jean-François Thibert</a>,
                   <a href="https://lucic.ai/">Mario Lučić</a>,
