--- a/index.html
+++ b/index.html
@@ -149,9 +149,10 @@
                     <span class="papertitle">Federated Learning on Unimodal Data</span>
                   </a>
                   <br>
-                  <a>Gabriel Park</a>,
                   <a>Rajesh Titung</a>,
-                  <a>Cedric Bone</a>
+                  <a>Gabriel Park</a>,
+                  <a>Cedric Bone</a>,
+                  <a>Cecilia O. Alm</a>
                   <!-- <strong>Jonathan T. Barron</strong>, -->
                   <!-- <a href="https://bmild.github.io/">Ben Mildenhall</a> -->
                   <br>
