--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
                     <!-- <a href="https://www.threads.net/@jonbarron">Threads</a> &nbsp;/&nbsp; -->
                     <!-- <a href="https://bsky.app/profile/jonbarron.bsky.social">Bluesky</a> &nbsp;/&nbsp; -->
                     <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
+                    <a href="https://www.linkedin.com/in/gabrielpark/">LinkedIn</a> &nbsp;/&nbsp;
                     <a href="https://github.com/gabrpark/">Github</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
-                  <a href="images/gabriel_park.png"><img
+                  <a href="images/gabrielpark.png"><img
                       style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo"
-                      src="images/gabriel_park.png" class="hoverZoomLink"></a>
+                      src="images/gabrielpark.png" class="hoverZoomLink"></a>
                 </td>
               </tr>
             </tbody>
@@ -95,7 +96,7 @@
                   </script>
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
-                  <a href="https://smerf-3d.github.io/">
+                  <a href="https://gabrpark.github.io/">
                     <span class="papertitle">In-the-Loop Interactive Machine Learning Mobile Application</span>
                   </a>
                   <br>
@@ -109,7 +110,8 @@
                   <a href="https://szeliski.org/">Richard Szeliski</a>, -->
                   <!-- <strong>Jonathan T. Barron</strong> -->
                   <br>
-                  <!-- <em>arXiv</em>, 2023 -->
+                  <!-- <em>arXiv</em>,  -->
+                  2023
                   <br>
                   <!-- <a href="https://smerf-3d.github.io/">project page</a>
                   /
