--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <!-- <a href="https://bsky.app/profile/jonbarron.bsky.social">Bluesky</a> &nbsp;/&nbsp; -->
                     <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                     <a href="https://www.linkedin.com/in/gabrielpark/">LinkedIn</a> &nbsp;/&nbsp;
-                    <a href="https://github.com/gabrpark/">Github</a>
+                    <a href="https://github.com/gabrpark/">GitHub</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
@@ -100,7 +100,8 @@
                     <span class="papertitle">In-the-Loop Interactive Machine Learning Mobile Application</span>
                   </a>
                   <br>
-                  <a>Gabriel Park</a>,
+                  <strong>Gabriel Park</strong>,
+                  <!-- <a>Gabriel Park</a>, -->
                   <a>Rajesh Titung</a>,
                   <a>Cecilia O. Alm</a>
                   <!-- <a href="https://creiser.github.io/">Christian Reiser</a>,
@@ -151,8 +152,9 @@
                     <span class="papertitle">Federated Learning on Unimodal Data</span>
                   </a>
                   <br>
+                  <!-- <a>Gabriel Park</a>, -->
+                  <strong>Gabriel Park</strong>,
                   <a>Rajesh Titung</a>,
-                  <a>Gabriel Park</a>,
                   <a>Cedric Bone</a>,
                   <a>Cecilia O. Alm</a>
                   <!-- <strong>Jonathan T. Barron</strong>, -->
