--- a/index.html
+++ b/index.html
@@ -79,22 +79,23 @@
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
                     <div class="two" id='smerf_image'>
-                      <!-- <video width=100% muted autoplay loop>
-                        <source src="images/smerf.mp4" type="video/mp4">
+                      <video width=100% muted autoplay loop>
+                        <source src="images/clasp_mobile.mp4" type="video/mp4">
                         Your browser does not support the video tag.
-                      </video></div> -->
-                      <img src='images/self_hosting_architecture2_website.png' width=100%>
+                      </video>
                     </div>
-                    <script type="text/javascript">
-                      function smerf_start() {
-                        document.getElementById('smerf_image').style.opacity = "1";
-                      }
+                    <img src='images/clasp_mobile.png' width=100%>
+                  </div>
+                  <script type="text/javascript">
+                    function smerf_start() {
+                      document.getElementById('smerf_image').style.opacity = "1";
+                    }
 
-                      function smerf_stop() {
-                        document.getElementById('smerf_image').style.opacity = "0";
-                      }
-                      smerf_stop()
-                    </script>
+                    function smerf_stop() {
+                      document.getElementById('smerf_image').style.opacity = "0";
+                    }
+                    smerf_stop()
+                  </script>
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <a href="https://gabrpark.github.io/">
