--- a/index.html
+++ b/index.html
@@ -132,22 +132,23 @@
               <tr onmouseout="nuvo_stop()" onmouseover="nuvo_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='nuvo_image'><video width=100% muted autoplay loop>
+                    <div class="two" id='nuvo_image'>
+                      <!-- <video width=100% muted autoplay loop>
                         <source src="images/nuvo.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                       </video></div>
-                    <img src='images/nuvo.jpg' width=100%>
-                  </div>
-                  <script type="text/javascript">
-                    function nuvo_start() {
-                      document.getElementById('nuvo_image').style.opacity = "1";
-                    }
+                    <img src='images/nuvo.jpg' width=100%> -->
+                    </div>
+                    <script type="text/javascript">
+                      function nuvo_start() {
+                        document.getElementById('nuvo_image').style.opacity = "1";
+                      }
 
-                    function nuvo_stop() {
-                      document.getElementById('nuvo_image').style.opacity = "0";
-                    }
-                    nuvo_stop()
-                  </script>
+                      function nuvo_stop() {
+                        document.getElementById('nuvo_image').style.opacity = "0";
+                      }
+                      nuvo_stop()
+                    </script>
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <a>
