--- a/index.html
+++ b/index.html
@@ -27,13 +27,12 @@
                   <p class="name" style="text-align: center;">
                     Gabriel Park
                   </p>
-                  <p>I'm a second year master's student with specialization in Artificial Intelligence at Rochester
-                    Institute of Technology (RIT).
+                  <p>I'm a recent graduate with Master's in Data Science specializing in Artificial Intelligence from
+                    Rochester Institute of Technology (RIT).
                   </p>
                   <p>
-                    At RIT I've worked on Human-centered AI system research & developement, Multimodal Deep Learning,
-                    and Federated
-                    Learning.
+                    At RIT, I worked on Human-centered AI system research & developement. I'm currently researching on
+                    Federated Learning (Distribute Machine Learning).
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:gabrpark@gmail.com">Email</a> &nbsp;/&nbsp;
