--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     Federated Learning (Distribute Machine Learning).
                   </p>
                   <p style="text-align:center">
-                    <a href="mailto:gabrpark@gmail.com">Email</a> &nbsp;/&nbsp;
+                    <a href="mailto:gabr.park@gmail.com">Email</a> &nbsp;/&nbsp;
                     <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp; -->
                     <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
                     <!-- <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp; -->
@@ -61,7 +61,7 @@
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <h2>Projects</h2>
                   <p>
-                    I'm interested in multimodal deep learning, generative AI, and MLOps. Most of my project is about
+                    I'm interested in generative AI and natural language processing. Most of my project is about
                     training model from human feedback using edge devices and building the systems for it.
                   </p>
                 </td>
