update my website contents

--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
                     Rochester Institute of Technology (RIT).
                   </p>
                   <p>
-                    At RIT, I worked on Human-centered AI system research & developement. I'm currently researching on
-                    Federated Learning (Distribute Machine Learning).
+                    Experienced in MLaaS solutions, I developed data crawling and language modeling systems to analyze
+                    e-commerce product
+                    reviews, providing real-time market insights. My focus is on human-centered AI research and
+                    development, including
+                    distributed machine learning (Federated Learning) with emotion analysis. Currently building a custom
+                    AI chatbot to
+                    assist job seekers.
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:gabr.park@gmail.com">Email</a> &nbsp;/&nbsp;
@@ -61,8 +66,8 @@
                 <td style="padding:20px;width:100%;vertical-align:middle">
                   <h2>Projects</h2>
                   <p>
-                    I'm interested in generative AI and natural language processing. Most of my project is about
-                    training model from human feedback using edge devices and building the systems for it.
+                    I'm interested in generative AI and natural language processing and passionate about building
+                    end-to-end AI systems for production.
                   </p>
                 </td>
               </tr>
@@ -72,7 +77,58 @@
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
 
+              <tr onmouseout="smerf_stop()" onmouseover="smerf_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two" id='smerf_image'>
+                      <!-- <video width=100% muted autoplay loop>
+                        <source src="images/clasp_mobile.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                      </video> -->
+                    </div>
+                    <!-- <img src='images/self_hosting_architecture_v3.png' width=100%> -->
+                  </div>
+                  <script type="text/javascript">
+                    function smerf_start() {
+                      document.getElementById('smerf_image').style.opacity = "1";
+                    }
 
+                    function smerf_stop() {
+                      document.getElementById('smerf_image').style.opacity = "0";
+                    }
+                    smerf_stop()
+                  </script>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://gabrpark.github.io/">
+                    <span class="papertitle">Career Coach AI Chatbot</span>
+                  </a>
+                  <br>
+                  <strong>Gabriel Park</strong>,
+                  <!-- <a>Gabriel Park</a>, -->
+                  <!-- <a>Rajesh Titung</a> -->
+                  <!-- <a href="https://creiser.github.io/">Christian Reiser</a>,
+                                <a href="">Peter Zhizhin</a>,
+                                <a href="">Jean-François Thibert</a>,
+                                <a href="https://lucic.ai/">Mario Lučić</a>,
+                                <a href="https://szeliski.org/">Richard Szeliski</a>, -->
+                  <!-- <strong>Jonathan T. Barron</strong> -->
+                  <br>
+                  <!-- <em>arXiv</em>,  -->
+                  2024
+                  <br>
+                  <!-- <a href="https://smerf-3d.github.io/">project page</a>
+                                /
+                                <a href="https://www.youtube.com/watch?v=zhO8iUBpnCc">video</a>
+                                /
+                                <a href="https://arxiv.org/abs/2312.07541">arXiv</a>
+                                <p></p> -->
+                  <p>
+                    Allowing job seekers to interact with a chatbot to get career advice and job search tips in their
+                    specific situation.
+                  </p>
+                </td>
+              </tr>
 
               <tr onmouseout="smerf_stop()" onmouseover="smerf_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
@@ -83,7 +139,7 @@
                         Your browser does not support the video tag.
                       </video>
                     </div>
-                    <img src='images/clasp_mobile.png' width=100%>
+                    <img src='images/self_hosting_architecture_v3.png' width=100%>
                   </div>
                   <script type="text/javascript">
                     function smerf_start() {
@@ -151,7 +207,7 @@
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <a>
-                    <span class="papertitle">Federated Learning on Unimodal Data</span>
+                    <span class="papertitle">Federated Learning on Emotional Multimodal Data</span>
                   </a>
                   <br>
                   <!-- <a>Gabriel Park</a>, -->
@@ -172,7 +228,7 @@
                   <a href="http://arxiv.org/abs/2312.05283">arXiv</a> -->
                   <p></p>
                   <p>
-                    Exploring the potential of federated learning with unimodal data.
+                    Exploring the potential of federated learning with emotional multimodal data.
                   </p>
                 </td>
               </tr>
