--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
                     <div class="two" id='smerf_image'>
-                      <!-- <video width=100% muted autoplay loop>
-                        <source src="images/clasp_mobile.mp4" type="video/mp4">
+                      <video width=100% muted autoplay loop>
+                        <source src="" type="video/mp4">
                         Your browser does not support the video tag.
-                      </video> -->
+                      </video>
                     </div>
-                    <!-- <img src='images/self_hosting_architecture_v3.png' width=100%> -->
+                    <img src='' width=100%>
                   </div>
                   <script type="text/javascript">
                     function smerf_start() {
