--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <span class="papertitle">Career Coach AI Chatbot</span>
                   </a>
                   <br>
-                  <strong>Gabriel Park</strong>,
+                  <strong>Gabriel Park</strong>
                   <!-- <a>Gabriel Park</a>, -->
                   <!-- <a>Rajesh Titung</a> -->
                   <!-- <a href="https://creiser.github.io/">Christian Reiser</a>,
@@ -126,6 +126,55 @@
                   <p>
                     Allowing job seekers to interact with a chatbot to get career advice and job search tips in their
                     specific situation.
+                  </p>
+                </td>
+              </tr>
+
+              <tr onmouseout="nuvo_stop()" onmouseover="nuvo_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two" id='nuvo_image'>
+                      <!-- <video width=100% muted autoplay loop>
+                                                    <source src="images/nuvo.mp4" type="video/mp4">
+                                                    Your browser does not support the video tag.
+                                                  </video></div>
+                                                <img src='images/nuvo.jpg' width=100%> -->
+                    </div>
+                    <script type="text/javascript">
+                      function nuvo_start() {
+                        document.getElementById('nuvo_image').style.opacity = "1";
+                      }
+
+                      function nuvo_stop() {
+                        document.getElementById('nuvo_image').style.opacity = "0";
+                      }
+                      nuvo_stop()
+                    </script>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a>
+                    <span class="papertitle">Federated Learning on Emotional Multimodal Data</span>
+                  </a>
+                  <br>
+                  <!-- <a>Gabriel Park</a>, -->
+                  <strong>Gabriel Park</strong>,
+                  <a>Rajesh Titung</a>,
+                  <a>Cedric Bone</a>,
+                  <a>Cecilia O. Alm</a>
+                  <!-- <strong>Jonathan T. Barron</strong>, -->
+                  <!-- <a href="https://bmild.github.io/">Ben Mildenhall</a> -->
+                  <br>
+                  <!-- <em>arXiv</em>,  -->
+                  2024
+                  <br>
+                  <!-- <a href="https://pratulsrinivasan.github.io/nuvo/">project page</a>
+                                              /
+                                              <a href="https://www.youtube.com/watch?v=hmJiOSTDQZI">video</a>
+                                              /
+                                              <a href="http://arxiv.org/abs/2312.05283">arXiv</a> -->
+                  <p></p>
+                  <p>
+                    Exploring the potential of federated learning with emotional multimodal data.
                   </p>
                 </td>
               </tr>
@@ -179,56 +228,6 @@
                   <p></p> -->
                   <p>
                     Enabling direct interaction between user and machine learning model.
-                  </p>
-                </td>
-              </tr>
-
-
-              <tr onmouseout="nuvo_stop()" onmouseover="nuvo_start()">
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                  <div class="one">
-                    <div class="two" id='nuvo_image'>
-                      <!-- <video width=100% muted autoplay loop>
-                        <source src="images/nuvo.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                      </video></div>
-                    <img src='images/nuvo.jpg' width=100%> -->
-                    </div>
-                    <script type="text/javascript">
-                      function nuvo_start() {
-                        document.getElementById('nuvo_image').style.opacity = "1";
-                      }
-
-                      function nuvo_stop() {
-                        document.getElementById('nuvo_image').style.opacity = "0";
-                      }
-                      nuvo_stop()
-                    </script>
-                </td>
-                <td style="padding:20px;width:75%;vertical-align:middle">
-                  <a>
-                    <span class="papertitle">Federated Learning on Emotional Multimodal Data</span>
-                  </a>
-                  <br>
-                  <!-- <a>Gabriel Park</a>, -->
-                  <strong>Gabriel Park</strong>,
-                  <a>Rajesh Titung</a>,
-                  <a>Cedric Bone</a>,
-                  <a>Cecilia O. Alm</a>
-                  <!-- <strong>Jonathan T. Barron</strong>, -->
-                  <!-- <a href="https://bmild.github.io/">Ben Mildenhall</a> -->
-                  <br>
-                  <!-- <em>arXiv</em>,  -->
-                  2024
-                  <br>
-                  <!-- <a href="https://pratulsrinivasan.github.io/nuvo/">project page</a>
-                  /
-                  <a href="https://www.youtube.com/watch?v=hmJiOSTDQZI">video</a>
-                  /
-                  <a href="http://arxiv.org/abs/2312.05283">arXiv</a> -->
-                  <p></p>
-                  <p>
-                    Exploring the potential of federated learning with emotional multimodal data.
                   </p>
                 </td>
               </tr>
