--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
 
-              <tr onmouseout="smerf_stop()" onmouseover="smerf_start()">
+              <!-- <tr onmouseout="smerf_stop()" onmouseover="smerf_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
                     <div class="two" id='smerf_image'>
@@ -106,136 +106,136 @@
                   <br>
                   <strong>Gabriel Park</strong>
                   <!-- <a>Gabriel Park</a>, -->
-                  <!-- <a>Rajesh Titung</a> -->
-                  <!-- <a href="https://creiser.github.io/">Christian Reiser</a>,
+              <!-- <a>Rajesh Titung</a> -->
+              <!-- <a href="https://creiser.github.io/">Christian Reiser</a>,
                                 <a href="">Peter Zhizhin</a>,
                                 <a href="">Jean-François Thibert</a>,
                                 <a href="https://lucic.ai/">Mario Lučić</a>,
                                 <a href="https://szeliski.org/">Richard Szeliski</a>, -->
-                  <!-- <strong>Jonathan T. Barron</strong> -->
-                  <br>
-                  <!-- <em>arXiv</em>,  -->
-                  2024
-                  <br>
-                  <!-- <a href="https://smerf-3d.github.io/">project page</a>
+              <!-- <strong>Jonathan T. Barron</strong> -->
+              <br>
+              <!-- <em>arXiv</em>,  -->
+              2024
+              <br>
+              <!-- <a href="https://smerf-3d.github.io/">project page</a>
                                 /
                                 <a href="https://www.youtube.com/watch?v=zhO8iUBpnCc">video</a>
                                 /
                                 <a href="https://arxiv.org/abs/2312.07541">arXiv</a>
                                 <p></p> -->
-                  <p>
-                    Allowing job seekers to interact with a chatbot to get career advice and job search tips in their
-                    specific situation.
-                  </p>
-                </td>
-              </tr>
+              <p>
+                Allowing job seekers to interact with a chatbot to get career advice and job search tips in their
+                specific situation.
+              </p>
+        </td>
+      </tr> -->
 
-              <tr onmouseout="nuvo_stop()" onmouseover="nuvo_start()">
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                  <div class="one">
-                    <div class="two" id='nuvo_image'>
-                      <!-- <video width=100% muted autoplay loop>
+      <tr onmouseout="nuvo_stop()" onmouseover="nuvo_start()">
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <div class="one">
+            <div class="two" id='nuvo_image'>
+              <!-- <video width=100% muted autoplay loop>
                                                     <source src="images/nuvo.mp4" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                   </video></div>
                                                 <img src='images/nuvo.jpg' width=100%> -->
-                    </div>
-                    <script type="text/javascript">
-                      function nuvo_start() {
-                        document.getElementById('nuvo_image').style.opacity = "1";
-                      }
+            </div>
+            <script type="text/javascript">
+              function nuvo_start() {
+                document.getElementById('nuvo_image').style.opacity = "1";
+              }
 
-                      function nuvo_stop() {
-                        document.getElementById('nuvo_image').style.opacity = "0";
-                      }
-                      nuvo_stop()
-                    </script>
-                </td>
-                <td style="padding:20px;width:75%;vertical-align:middle">
-                  <a>
-                    <span class="papertitle">Federated Learning on Emotional Multimodal Data</span>
-                  </a>
-                  <br>
-                  <!-- <a>Gabriel Park</a>, -->
-                  <strong>Gabriel Park</strong>,
-                  <a>Rajesh Titung</a>,
-                  <a>Cedric Bone</a>,
-                  <a>Cecilia O. Alm</a>
-                  <!-- <strong>Jonathan T. Barron</strong>, -->
-                  <!-- <a href="https://bmild.github.io/">Ben Mildenhall</a> -->
-                  <br>
-                  <!-- <em>arXiv</em>,  -->
-                  2024
-                  <br>
-                  <!-- <a href="https://pratulsrinivasan.github.io/nuvo/">project page</a>
+              function nuvo_stop() {
+                document.getElementById('nuvo_image').style.opacity = "0";
+              }
+              nuvo_stop()
+            </script>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a>
+            <span class="papertitle">Federated Learning on Emotional Multimodal Data</span>
+          </a>
+          <br>
+          <!-- <a>Gabriel Park</a>, -->
+          <strong>Gabriel Park</strong>,
+          <a>Rajesh Titung</a>,
+          <a>Cedric Bone</a>,
+          <a>Cecilia O. Alm</a>
+          <!-- <strong>Jonathan T. Barron</strong>, -->
+          <!-- <a href="https://bmild.github.io/">Ben Mildenhall</a> -->
+          <br>
+          <!-- <em>arXiv</em>,  -->
+          2024
+          <br>
+          <!-- <a href="https://pratulsrinivasan.github.io/nuvo/">project page</a>
                                               /
                                               <a href="https://www.youtube.com/watch?v=hmJiOSTDQZI">video</a>
                                               /
                                               <a href="http://arxiv.org/abs/2312.05283">arXiv</a> -->
-                  <p></p>
-                  <p>
-                    Exploring the potential of federated learning with emotional multimodal data.
-                  </p>
-                </td>
-              </tr>
+          <p></p>
+          <p>
+            Exploring the potential of federated learning with emotional multimodal data.
+          </p>
+        </td>
+      </tr>
 
-              <tr onmouseout="cm_stop()" onmouseover="cm_start()">
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                  <div class="one">
-                    <div class="two" id='clasp_mobile_image'>
-                      <video width=100% muted autoplay loop>
-                        <source src="images/clasp_mobile.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                      </video>
-                    </div>
-                    <img src='images/clasp_mobile.png' width=100%>
-                  </div>
-                  <script type="text/javascript">
-                    function cm_start() {
-                      document.getElementById('clasp_mobile_image').style.opacity = "1";
-                    }
+      <tr onmouseout="smerf_stop()" onmouseover="smerf_start()">
+        <td style="padding:20px;width:25%;vertical-align:middle">
+          <div class="one">
+            <div class="two" id='smerf_image'>
+              <video width=100% muted autoplay loop>
+                <source src="images/clasp_mobile.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+            </div>
+            <img src='images/clasp_mobile.png' width=100%>
+          </div>
+          <script type="text/javascript">
+            function smerf_start() {
+              document.getElementById('smerf_image').style.opacity = "1";
+            }
 
-                    function cm_stop() {
-                      document.getElementById('clasp_mobile_image').style.opacity = "0";
-                    }
-                    smerf_stop()
-                  </script>
-                </td>
-                <td style="padding:20px;width:75%;vertical-align:middle">
-                  <a href="https://gabrpark.github.io/">
-                    <span class="papertitle">In-the-Loop Interactive Machine Learning Mobile Application</span>
-                  </a>
-                  <br>
-                  <strong>Gabriel Park</strong>,
-                  <!-- <a>Gabriel Park</a>, -->
-                  <a>Rajesh Titung</a>,
-                  <a>Cecilia O. Alm</a>
-                  <!-- <a href="https://creiser.github.io/">Christian Reiser</a>,
+            function smerf_stop() {
+              document.getElementById('smerf_image').style.opacity = "0";
+            }
+            smerf_stop()
+          </script>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle">
+          <a href="https://gabrpark.github.io/">
+            <span class="papertitle">In-the-Loop Interactive Machine Learning Mobile Application</span>
+          </a>
+          <br>
+          <strong>Gabriel Park</strong>,
+          <!-- <a>Gabriel Park</a>, -->
+          <a>Rajesh Titung</a>,
+          <a>Cecilia O. Alm</a>
+          <!-- <a href="https://creiser.github.io/">Christian Reiser</a>,
                   <a href="">Peter Zhizhin</a>,
                   <a href="">Jean-François Thibert</a>,
                   <a href="https://lucic.ai/">Mario Lučić</a>,
                   <a href="https://szeliski.org/">Richard Szeliski</a>, -->
-                  <!-- <strong>Jonathan T. Barron</strong> -->
-                  <br>
-                  <!-- <em>arXiv</em>,  -->
-                  2023
-                  <br>
-                  <!-- <a href="https://smerf-3d.github.io/">project page</a>
+          <!-- <strong>Jonathan T. Barron</strong> -->
+          <br>
+          <!-- <em>arXiv</em>,  -->
+          2023
+          <br>
+          <!-- <a href="https://smerf-3d.github.io/">project page</a>
                   /
                   <a href="https://www.youtube.com/watch?v=zhO8iUBpnCc">video</a>
                   /
                   <a href="https://arxiv.org/abs/2312.07541">arXiv</a>
                   <p></p> -->
-                  <p>
-                    Enabling direct interaction between user and machine learning model.
-                  </p>
-                </td>
-              </tr>
+          <p>
+            Enabling direct interaction between user and machine learning model.
+          </p>
+        </td>
+      </tr>
 
-            </tbody>
-          </table>
+    </tbody>
+  </table>
 
-          <!-- 
+  <!-- 
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
             <tbody>
               <tr>
@@ -248,7 +248,7 @@
           <table width="100%" align="center" border="0" cellpadding="20">
             <tbody> -->
 
-          <!-- <tr>
+  <!-- <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/cvf.jpg"></td>
                 <td width="75%" valign="center">
                   <a href="https://cvpr.thecvf.com/Conferences/2024/Organizers">Area Chair, CVPR 2024</a>
@@ -299,7 +299,7 @@
               </tr> -->
 
 
-    </tbody>
+  </tbody>
   </table>
   <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tbody>
