Add image to career chatbot experience

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
                     Rochester Institute of Technology (RIT).
                   </p>
                   <p>
-                    Experienced in MLaaS solutions, I developed data crawling and language modeling systems to analyze
+                    Experienced in MLaaS solutions for retail & consumer goods businesses, I developed data crawling and
+                    language modeling systems to analyze
                     e-commerce product
                     reviews, providing real-time market insights. My focus is on human-centered AI research and
                     development, including
                     distributed machine learning (Federated Learning) with emotion analysis. Currently building a custom
-                    AI chatbot to
+                    AI chatbot with private data to
                     assist job seekers.
                   </p>
                   <p style="text-align:center">
@@ -86,7 +87,7 @@
                         Your browser does not support the video tag.
                       </video>
                     </div>
-                    <img src='' width=100%>
+                    <img src='images/ca_rag.png' width=100%>
                   </div>
                   <script type="text/javascript">
                     function chatcareer_start() {
