--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
                   <!-- <a>Gabriel Park</a>, -->
                   <strong>Gabriel Park</strong>,
                   <a>Rajesh Titung</a>,
-                  <a>Cedric Bone</a>,
-                  <a>Cecilia O. Alm</a>
+                  <!-- <a>Cedric Bone</a>,
+                  <a>Cecilia O. Alm</a> -->
                   <!-- <strong>Jonathan T. Barron</strong>, -->
                   <!-- <a href="https://bmild.github.io/">Ben Mildenhall</a> -->
                   <br>
