--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                                 <p></p> -->
                   <p>
                     Allowing job seekers to interact with a chatbot to get career advice and job search tips in their
-                    specific situation.
+                    specific situation. The chatbot is implemented in RAG architecture with a custom private dataset
+                    extracted from various sources, including Facebook group history and lincesed books.
                   </p>
                 </td>
               </tr>
@@ -159,7 +160,7 @@
                   <br>
                   <!-- <a>Gabriel Park</a>, -->
                   <strong>Gabriel Park</strong>,
-                  <a>Rajesh Titung</a>,
+                  <a>Rajesh Titung</a>
                   <!-- <a>Cedric Bone</a>,
                   <a>Cecilia O. Alm</a> -->
                   <!-- <strong>Jonathan T. Barron</strong>, -->
