--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
                 </td>
               </tr>
 
-              <tr onmouseout="nuvo_stop()" onmouseover="nuvo_start()">
+              <!-- <tr onmouseout="nuvo_stop()" onmouseover="nuvo_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
                     <div class="two" id='nuvo_image'>
-                      <!-- <video width=100% muted autoplay loop>
+                      <video width=100% muted autoplay loop>
                                                     <source src="images/nuvo.mp4" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                   </video></div>
-                                                <img src='images/nuvo.jpg' width=100%> -->
+                                                <img src='images/nuvo.jpg' width=100%>
                     </div>
                     <script type="text/javascript">
                       function nuvo_start() {
@@ -158,28 +158,28 @@
                     <span class="papertitle">Federated Learning on Emotional Multimodal Data</span>
                   </a>
                   <br>
-                  <!-- <a>Gabriel Park</a>, -->
+                  <a>Gabriel Park</a>,
                   <strong>Gabriel Park</strong>,
                   <a>Rajesh Titung</a>
-                  <!-- <a>Cedric Bone</a>,
-                  <a>Cecilia O. Alm</a> -->
-                  <!-- <strong>Jonathan T. Barron</strong>, -->
-                  <!-- <a href="https://bmild.github.io/">Ben Mildenhall</a> -->
+                  <a>Cedric Bone</a>,
+                  <a>Cecilia O. Alm</a>
+                  <strong>Jonathan T. Barron</strong>,
+                  <a href="https://bmild.github.io/">Ben Mildenhall</a>
                   <br>
-                  <!-- <em>arXiv</em>,  -->
+                  <em>arXiv</em>, 
                   2024
                   <br>
-                  <!-- <a href="https://pratulsrinivasan.github.io/nuvo/">project page</a>
+                  <a href="https://pratulsrinivasan.github.io/nuvo/">project page</a>
                                               /
                                               <a href="https://www.youtube.com/watch?v=hmJiOSTDQZI">video</a>
                                               /
-                                              <a href="http://arxiv.org/abs/2312.05283">arXiv</a> -->
+                                              <a href="http://arxiv.org/abs/2312.05283">arXiv</a>
                   <p></p>
                   <p>
                     Exploring the potential of federated learning with emotional multimodal data.
                   </p>
                 </td>
-              </tr>
+              </tr> -->
 
               <tr onmouseout="smerf_stop()" onmouseover="smerf_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
