--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <a href="https://gabrpark.github.io/">
-                    <span class="papertitle">Career Coach AI Chatbot</span>
+                    <span class="papertitle">Career AI Chatbot</span>
                   </a>
                   <br>
                   <strong>Gabriel Park</strong>
