--- a/index.html
+++ b/index.html
@@ -31,14 +31,11 @@
                     Rochester Institute of Technology (RIT).
                   </p>
                   <p>
-                    Experienced in MLaaS solutions for retail & consumer goods businesses, I developed data crawling and
-                    language modeling systems to analyze
-                    e-commerce product
-                    reviews, providing real-time market insights. My focus is on human-centered AI research and
-                    development, including
-                    distributed machine learning (Federated Learning) with emotion analysis. Currently building a custom
-                    AI chatbot with private data to
-                    assist job seekers.
+                    Results-driven Machine Learning & Data Professional with a Master's degree in Data Science and
+                    hands-on experience in
+                    developing end-to-end ML systems. Love problem-solving and being a team player. Skilled in data
+                    ingestion, modeling, and
+                    analysis. Proven ability to lead interdisciplinary projects.
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:gabr.park@gmail.com">Email</a> &nbsp;/&nbsp;
@@ -125,7 +122,8 @@
                                 <a href="https://arxiv.org/abs/2312.07541">arXiv</a>
                                 <p></p> -->
                   <p>
-                    Allowing job seekers to interact with a chatbot to get career advice and job search tips in their
+                    Helping career coaching clients to interact with a chatbot to get career advice and job search tips
+                    in their
                     specific situation. The chatbot is implemented in RAG architecture with a custom private dataset
                     extracted from various sources, including Facebook group history and lincesed books.
                   </p>
