--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
                     analysis. Proven ability to lead interdisciplinary projects.
                   </p>
                   <p style="text-align:center">
-                    <a href="mailto:gabr.park@gmail.com">Email</a> &nbsp;/&nbsp;
                     <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp; -->
                     <!-- <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp; -->
                     <!-- <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp; -->
@@ -43,7 +42,11 @@
                     <!-- <a href="https://bsky.app/profile/jonbarron.bsky.social">Bluesky</a> &nbsp;/&nbsp; -->
                     <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                     <a href="https://www.linkedin.com/in/gabrielpark/">LinkedIn</a> &nbsp;/&nbsp;
-                    <a href="https://github.com/gabrpark/">GitHub</a>
+                    <a href="https://github.com/gabrpark/">GitHub</a> &nbsp;/&nbsp;
+                    <a
+                      href="https://drive.google.com/drive/folders/1BBfSHej02q7oTHPWPLIUPD5gfWXoK_KK?usp=sharing">Research</a>
+                    &nbsp;/&nbsp;
+                    <a href="mailto:gabr.park@gmail.com">Email</a> &nbsp;/&nbsp;
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
