--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a
                       href="https://drive.google.com/drive/folders/1BBfSHej02q7oTHPWPLIUPD5gfWXoK_KK?usp=sharing">Research</a>
                     &nbsp;/&nbsp;
-                    <a href="mailto:gabr.park@gmail.com">Email</a> &nbsp;/&nbsp;
+                    <a href="mailto:gabr.park@gmail.com">Email</a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
